--- a/vplugin-demo-secret.yml
+++ b/vplugin-demo-secret.yml
@@ -4,7 +4,7 @@ metadata:
   namespace: vplugin-demo
   name: example-secret
   annotations:
-    avp_path: "vplugin/data/supersecret"
+    avp.kubernetes.io/path: "vplugin/data/supersecret"
 type: Opaque
 stringData:
   username: <username>
